fixed team on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ fieldset[disabled] .btn-blue.active {
   border-radius: 0px;
 }
 .navbar-right{
-  margin-top:10px;
+  margin-top: 10px;
 }
 .logo{
   padding-left: 10px !important;
@@ -492,13 +492,4 @@ li {
   text-align: center;
   vertical-align: top;
   width: 100%;
-}
-
-/* RESPONSIVENESS */
-@media only screen and (max-width: 768px) {
-  .carousel .carousel-inner .item img{
-    object-fit: cover;
-    min-height: 100vw;
-    width: auto;
-  }
 }
